# bernstein-gpu

./: .gitignore  CMakeLists.txt  Makefile  main.cpp  mass.py  readme.md  run.py  run_all.sh
analysis/: newpvplot.py  performance.ipynb  pv2dplot.py  pv3dplot.py  pvcomparison.py  pvplot.py  sliced_pvplot.py  validation.py  westervelt_analytical.py
apps/ExaFUS/: CMakeLists.txt
apps/FreeFUS/: CMakeLists.txt  fus.py  main.cpp
apps/FreeFUS/data/skull-small/: ascent_actions.yaml
apps/FreeFUS/data/test_mesh/: ascent_actions.yaml  mesh.json
apps/FreeFUS/include/: ascent_helpers.hpp  cli.hpp  fem_helpers.hpp  insitu.hpp  materials.hpp  mesh_helpers.hpp  model.hpp  solver.hpp  timestepping.hpp  types.hpp
apps/KernelOptimiser/: main.cpp
examples/: bernstein_congruence.py  bernstein_dofs.py  bernstein_dofs1D.py  bernstein_dofs2D.py  bernstein_dofs3D.py  dofs_permutations.py
examples/boundary_check/: main.cpp
examples/hex_gpu/: Linear.hpp  hex_gpu.py  main.cpp
examples/mass3D_cg/: main.cpp
examples/mass_cg/: main.cpp  mass_cg.py
examples/mat_free_RHS/: main.cpp  mat_free_RHS.py
examples/mat_free_exterior_mass/: main.cpp  mat_free_exterior_mass.py
examples/mat_free_exterior_mass3D/: main.cpp  mat_free_exterior_mass3D.py
examples/mat_free_mass/: main.cpp  mat_free_mass.py
examples/mat_free_mass3D/: main.cpp  mat_free_mass3D.py
examples/mat_free_newmark/: main.cpp
examples/mat_free_stiffness/: main.cpp  mat_free_stiffness.py
examples/mat_free_stiffness3D/: main.cpp  mat_free_stiffness3D.py
examples/newmark_cg/: main.cpp  newmark_cg.py
examples/planar_wave/: Linear.hpp  main.cpp  mesh.h5  mesh.xdmf  planar_wave.py
examples/planar_wave_gpu/: Linear.hpp  main.cpp  planar_wave.py
examples/planar_wave_tets_gpu/: Linear.hpp  main.cpp  planar_wave_tets_gpu.py
examples/planar_wave_triangles/: Linear.hpp  main.cpp  planar_wave_triangles.py
examples/planar_wave_triangles_gpu/: Linear.hpp  main.cpp  mesh.h5  mesh.xdmf
examples/planar_wave_triangles_gpu_test/: Linear.hpp  main.cpp  planar_wave_triangles_gpu_test.py
examples/quad_gpu/: Linear.hpp  main.cpp
examples/spherical_transducer_gpu/: Linear.hpp  main.cpp  spherical_transducer_gpu.py
examples/stiff_cg/: main.cpp  stiff_cg.py
experiments/FR_CG_RTX/: newplot.py  plot.py  run.sh
experiments/FreeFUS_CG/: run.sh
experiments/KO_RTX/: plot.py  run.sh
experiments/blockdim/: newplot.py  plot.py  run.sh
experiments/cg_2D/: log_bernstein_10.txt  log_bernstein_11.txt  log_bernstein_12.txt  log_bernstein_2.txt  log_bernstein_3.txt  log_bernstein_4.txt  log_bernstein_5.txt  log_bernstein_6.txt  log_bernstein_7.txt  log_bernstein_8.txt  log_bernstein_9.txt  log_gll_10.txt  log_gll_11.txt  log_gll_12.txt  log_gll_2.txt  log_gll_3.txt  log_gll_4.txt  log_gll_5.txt  log_gll_6.txt  log_gll_7.txt  log_gll_8.txt  log_gll_9.txt  plot.py  run.sh
experiments/cg_3D/: log_bernstein_2.txt  log_bernstein_3.txt  log_bernstein_4.txt  log_bernstein_5.txt  log_bernstein_6.txt  log_bernstein_7.txt  log_bernstein_8.txt  log_bernstein_9.txt  log_gll_2.txt  log_gll_3.txt  log_gll_4.txt  log_gll_5.txt  log_gll_6.txt  log_gll_7.txt  log_gll_8.txt  plot.py  run.sh
experiments/lumi-BPs/: run.sh
experiments/mat_free3D_A100/: log_float32_2.txt  log_float32_3.txt  log_float32_4.txt  log_float32_5.txt  log_float32_6.txt  log_float32_7.txt  log_float32_8.txt  log_float32_9.txt  log_float64_2.txt  log_float64_3.txt  log_float64_4.txt  log_float64_5.txt  log_float64_6.txt  log_float64_7.txt  log_float64_8.txt  log_float64_9.txt  plot.py  run.sh
experiments/mat_free3D_A30/: log_1.txt  log_2.txt  log_3.txt  log_4.txt  log_5.txt  log_6.txt  log_7.txt  log_8.txt  log_9.txt  plot.py  run.sh  s_log_2.txt  s_log_3.txt  s_log_4.txt  s_log_5.txt  s_log_6.txt  s_log_7.txt  s_log_8.txt  s_log_9.txt  sf_log_2.txt  sf_log_3.txt  sf_log_4.txt  sf_log_5.txt  sf_log_6.txt  sf_log_7.txt  sf_log_8.txt  sf_log_9.txt
experiments/mat_free3D_MI250x/: 32_log_3.txt  32_log_4.txt  32_log_5.txt  32_log_6.txt  32_log_7.txt  32_log_8.txt  32_log_9.txt  BP64_log_1.txt  BP64_log_4.txt  BP64_log_5.txt  BP64_log_9.txt  BP_log_10.txt  log_10.txt  log_3.txt  log_4.txt  log_5.txt  log_6.txt  log_7.txt  log_8.txt  log_9.txt  log_float32_2.txt  log_float32_3.txt  log_float32_4.txt  log_float32_5.txt  log_float32_6.txt  log_float32_7.txt  log_float64_2.txt  log_float64_3.txt  log_float64_6.txt  log_float64_7.txt  log_float64_8.txt  plot.py  run.sh
experiments/mat_free3D_RTX/: plot.py  run.sh
experiments/mat_free3D_stiffness_RTX/: log_float32_10.txt  log_float32_12.txt  log_float32_13.txt  log_float32_14.txt  log_float32_2.txt  log_float32_3.txt  log_float32_4.txt  log_float32_5.txt  log_float32_6.txt  log_float32_7.txt  log_float32_8.txt  log_float32_9.txt  log_float64_10.txt  log_float64_2.txt  log_float64_3.txt  log_float64_4.txt  newplot.py  plot.py  run.sh
experiments/mat_free_A100/: log_float32_2.txt  log_float32_3.txt  log_float32_4.txt  log_float32_5.txt  log_float32_6.txt  log_float32_7.txt  log_float32_8.txt  log_float32_9.txt  log_float64_2.txt  log_float64_3.txt  log_float64_4.txt  log_float64_5.txt  log_float64_6.txt  log_float64_7.txt  log_float64_8.txt  log_float64_9.txt  plot.py  run.sh
experiments/mat_free_A30/: log_1.txt  log_10.txt  log_11.txt  log_12.txt  log_2.txt  log_3.txt  log_4.txt  log_5.txt  log_6.txt  log_7.txt  log_8.txt  log_9.txt  plot.py  run.sh
experiments/mat_free_MI250x/: log_float32_2.txt  log_float32_3.txt  log_float32_4.txt  log_float32_5.txt  log_float32_6.txt  (+12 more)
mesh/: geo2xdmf.py  msh2xdmf.py  planar3d.py  spherical_transducer.py  transducer.py  transducer2d.py
spack/: cosma-rocm.yaml  hypre-cuda.yaml  hypre-rocm-lumi.yaml  hypre-rocm.yaml
src/: amd_gpu.hpp  cg.hpp  cg_gpu.hpp  dof_ordering.hpp  geometry.hpp  geometry_gpu.hpp  kernels.hpp  kernels_fused.hpp  kernels_mass.hpp  kernels_stiffness.hpp  laplaciantet.hpp  linalg.hpp  mass.hpp  mass3D.hpp  mass_baseline.hpp  mass_sf.hpp  mesh.hpp  newmark.hpp  profiler.hpp  quadrature.hpp  stiffness_baseline.hpp  stiffness_sf.hpp  types.hpp  util.hpp  vector.hpp
(+19 files in other folders)
